[metadata]
name = gpxo
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/gpxo
description =  Analyze and plot GPS data from GPX files with pandas
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = gps, gpx
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    pandas
    numpy
    matplotlib<3.3.3
    vincenty
    gpxpy
    mplleaflet
setup_requires =
    setuptools_scm
python_requires =
    >=3